--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/assets/style.css" />
-    <title>Vite + React</title>
+    <title>Easycrea</title>
   </head>
   <body>
     <div id="root"></div>
