--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       type="image/svg+xml"
       href="/src/assets/img/EasyCrea_icon.svg"
     />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/assets/style.css" />
     <title>Easycrea</title>
